[gd_scene load_steps=12 format=2]

[ext_resource path="res://VideoPlayer/Controls/button.png" type="Texture" id=1]
[ext_resource path="res://VideoPlayer/Controls/Button.gd" type="Script" id=2]
[ext_resource path="res://VideoPlayer/Assets/circle.png" type="Texture" id=3]
[ext_resource path="res://VideoPlayer/Assets/button-19.wav" type="AudioStream" id=4]
[ext_resource path="res://VideoPlayer/Assets/circle_outline.png" type="Texture" id=5]
[ext_resource path="res://Assets/KeyE.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PressArea/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 2.21914, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "focus"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PressArea/Outline:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 0.4, 0.4, 0.4, 0.4, 0.4 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PressArea/Outline:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.4, 0.4, 0.4 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Focus:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 0.4, 0.4, 0.4, 0.4, 0.4 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="Button" type="Node2D"]
script = ExtResource( 2 )

[node name="Focus" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.431373 )
position = Vector2( 20, 20 )
texture = ExtResource( 5 )

[node name="Panel" type="Panel" parent="Focus"]
visible = false
margin_left = 35.2233
margin_top = -74.5524
margin_right = 85.2233
margin_bottom = -24.5524
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Focus"]
modulate = Color( 1, 1, 1, 0.776471 )
position = Vector2( 47.8743, -42.2626 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="Line2D" type="Line2D" parent="Focus"]
position = Vector2( 27.4801, -22.309 )
points = PoolVector2Array( 0, 0, 7, -7 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="PressArea" type="Area2D" parent="."]

[node name="Outline" type="Sprite" parent="PressArea"]
visible = false
modulate = Color( 1, 1, 1, 0.196078 )
position = Vector2( 20, 20 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="PressArea"]
position = Vector2( 20, 20 )
texture = ExtResource( 1 )

[node name="Platform" type="StaticBody2D" parent="."]

[node name="ActionAnimation" type="AnimationPlayer" parent="."]
anims/action = SubResource( 2 )

[node name="HoverAnimation" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/focus = SubResource( 3 )
anims/hover = SubResource( 4 )

[node name="FocusAnimation" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/focus = SubResource( 5 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[connection signal="body_entered" from="PressArea" to="." method="_on_PressArea_body_entered"]
[connection signal="body_exited" from="PressArea" to="." method="_on_PressArea_body_exited"]
[connection signal="animation_finished" from="HoverAnimation" to="." method="_on_HoverAnimation_animation_finished"]
[connection signal="animation_started" from="HoverAnimation" to="." method="_on_HoverAnimation_animation_started"]
